add changes (logger, env, solve issues)

--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -31,6 +31,15 @@ services:
         condition: service_healthy
     env_file:
       - ./.env
+  kafka-ui:
+    container_name: kafka-ui
+    image: provectuslabs/kafka-ui:latest
+    ports:
+      - 8080:8080
+    depends_on:
+      - kafka
+    environment:
+      DYNAMIC_CONFIG_ENABLED: 'true'
 networks:
   default:
     driver: bridge
