--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -20,7 +20,22 @@ services:
       - ./.env
     healthcheck:
       test: ["CMD", "bash", "-c", "unset" , "JMX_PORT" ,";" ,"kafka-topics.sh","--zookeeper","zookeeper:2181","--list"]
-  
+  #storage with minio
+  minio:
+    image: quay.io/minio/minio
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    env_file:
+      - ./.env
+    volumes:
+      - 'minio_data:/data'
+    command: server /data --console-address ":9001"
+    healthcheck:
+      test: ["CMD", "mc", "ready", "local"]
+      interval: 5s
+      timeout: 5s
+      retries: 5  
   #We need to wait until kafka ends. 
   coinbase-fetcher:
     build: 
@@ -28,6 +43,18 @@ services:
       dockerfile: Dockerfile
     depends_on:
       kafka:
+        condition: service_healthy
+    env_file:
+      - ./.env
+  #We need to wait until kafka ends. 
+  kafka-to-minio:
+    build: 
+      context: ./kafka-to-minio
+      dockerfile: Dockerfile
+    depends_on:
+      kafka:
+        condition: service_healthy
+      minio:
         condition: service_healthy
     env_file:
       - ./.env
@@ -43,3 +70,6 @@ services:
 networks:
   default:
     driver: bridge
+volumes:
+  minio_data:
+    driver: local
